<resources>
    <string name="app_name">Fishify</string>
    <string name="details">Details</string>
    <string name="username">Username</string>
    <string name="story_app">Fishify</string>
    <string name="title_welcome_page">Welcome to Fishify</string>
    <string name="message_welcome_page"></string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="title_login_page">Login</string>
    <string name="message_login_page">Masukan Data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="name">Name</string>
    <string name="photo_detail_story">Fishify Photo</string>
    <string name="detail_story">Detail Story</string>

    <string name="title_home">Home</string>
    <string name="title_addStory">Scan Ikan</string>
    <string name="title_profile">Profile</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="story_desc_hint">Masukan Keterangan</string>
    <string name="upload">Upload</string>
    <string name="logout">Keluar</string>
    <string name="message_main_page">Selamat datang di Fishify</string>
    <string name="title">Title</string>

    <string name="input_name">Enter name</string>
    <string name="input_email">Enter email</string>
    <string name="input_password">Enter password</string>
    <string name="email_dont_match">Invalid email</string>
    <string name="password_dont_match">Password does not match</string>
    <string name="title_logout">Logout</string>
    <string name="input_image">Select a photo to upload!</string>
    <string name="add_story">Add Story</string>
    <string name="password_length">This field can\'t be less than 8 characters</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>

    <string name="my_location">My Location</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="share_location">Share My Location</string>

    <string name="empty_address">Unknown Address</string>
    <string name="empty_location">No Location</string>
    <string name="input_your_location">Input Your Location</string>
    <string name="EComerce">E-Commerce</string>
    <string name="ingrediants">Ingrediants</string>
    <string name="search_fish">Search Fish</string>
    <string name="IkanBawal">Ikan Bawal</string>
    <string name="sambalkemangi">Sambal Kemangi Lele</string>
    <string name="ricarica">Rica-Rica Lele</string>
    <string name="bawal">ikan Bawal</string>
    <string name="rekomendasi_ikan">Ikan Recomendasi</string>
    <string name="mangutlele">Mangut Lele</string>
    <string name="krengseng">Krengseng Lele</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="resep_lele"> 1/2 kg ikan lele digoreng
1 paket kecil santan kelapa
Secukupnya cabai rawit utuh
Secukupnya kemangi
1 serai geprek
2 daun salam
2 daun jeruk purut
Lengkuas geprek
Garam, penyedap rasa, gula secukupnya
Air secukupnya
</string>
    <string name="recipe">RESEP IKAN LELE</string>
    <string name="resep">"Mangut Lele

Bahan:

1/2 kg ikan lele digoreng
1 paket kecil santan kelapa
Secukupnya cabai rawit utuh
Secukupnya kemangi
1 serai geprek
2 daun salam
2 daun jeruk purut
Lengkuas geprek
Garam, penyedap rasa, gula secukupnya
Air secukupnya

Bumbu halus:
1 sdt ketumbar
3 bawang putih
4 bawang merah
2 ruas kunyit
1 kencur
2 kemiri

Cara memasak:
Tumis bumbu halus bersama lengkuas, daun salam dan daun jeruk purut sampai harum.
Masukkan santan, tambahkan air secukupnya, masukkan garam, penyedap rasa.
Masukkan ikan lele yang sudah digoreng, lalu tambahkan cabe rawit utuh, aduk rata.
Koreksi rasa, sesaat sebelum diangkat masukkan kemangi, aduk sebentar lalu matikan api.
Mangut lele siap disajikan.</string>
    <string name="namaikan">
"Jenis Ikan :
\n
Ikan Lele"</string>
    <string name="kandunganikan">
"Kandungan :
KALORI
LEMAK
PROTEIN
NATRIUM
VITAMIN B12
SELENIUM
FOSFOR
TIAMIN
KALIUM
KOLESTEROL
ASAM LEMAK OMEGA-3
ASAM LEMAK OMEGA-6"</string>
    <string name="youtube_video_description">Tutorial Resep Mangut Lele</string>
    <string name="rekomendasi_youtube">Rekomendasi Video Youtube</string>

</resources>