<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.fishify.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_itemFragment"
            app:destination="@id/navigation_ecomerce" />
    </fragment>
    <fragment
        android:id="@+id/navigation_addStory"
        android:name="com.dicoding.fishify.ui.main.fishscan.FishScanFragment"
        android:label="@string/title_addStory"
        tools:layout="@layout/fragment_add_story">
        <action
            app:launchSingleTop="true"
            android:id="@+id/action_navigation_addStory_to_navigation_home"
            app:destination="@id/navigation_home"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.dicoding.fishify.ui.main.logout.LogoutFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_logout" />
    <activity
        android:id="@+id/navigation_ecomerce"
        android:name="com.dicoding.fishify.ui.main.Recomendation.ProductActivity"
        android:label="fragment_item_list"
        tools:layout="@layout/activity_product" />
</navigation>